try new font, fixed minor spacing issue in HPT description

--- a/site/style/main.css
+++ b/site/style/main.css
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-    font-family: Arial;
+    font-family: 'Source Sans Pro', sans-serif;
     height: 100%;
     margin: 0px;
 }
